manifests/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1-namespace
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
