manifests/allow-nginx-app1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
  namespace: app1-namespace
spec:
  podSelector:
    matchLabels:
      app: app1
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nginx-namespace
      ports:
        - protocol: TCP
          port: 8080
