manifests/allow-nginx-app2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
  namespace: app2-namespace
spec:
  podSelector:
    matchLabels:
      app: app2
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nginx-namespace
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: nginx-namespace
      ports:
        - protocol: TCP
          port: 80
