manifests/deny-all-app1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: app1-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
