manifests/deny-all-app2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: app2-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
