manifests/deny-all-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: nginx-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
